<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/activity_margin"
    android:paddingEnd="@dimen/activity_margin"
    android:paddingTop="@dimen/activity_margin">

    <ImageView android:id="@+id/dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin_extra_large"
        android:src="@drawable/addnewtask"
        android:layout_gravity="center"
        android:contentDescription="@null"/>

    <EditText
        android:textColor="@color/date_and_time"
        android:id="@+id/note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:gravity="top"
        android:hint="@string/hint_enter_note"
        android:inputType="textCapSentences|textMultiLine"
        android:lines="2"
        android:textColorHint="@color/hint_enter_note"
        android:textSize="@dimen/input_new_note" />

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="3"
        android:orientation="horizontal"
        android:padding="20dp"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/personal"
            android:layout_width="@dimen/zero"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:layout_height="wrap_content"
            android:src="@drawable/personalon"
            android:contentDescription="@null"/>
        <ImageView
            android:id="@+id/work"
            android:layout_gravity="center"
            android:layout_width="@dimen/zero"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/work"
            android:contentDescription="@null"/>
        <ImageView
            android:id="@+id/meeting"
            android:layout_gravity="center"
            android:layout_width="@dimen/zero"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/meeting"
            android:contentDescription="@null"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:weightSum="3"
        android:padding="@dimen/margin_extra_large"
        android:orientation="horizontal"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/shopping"
            android:layout_gravity="center"
            android:layout_width="@dimen/zero"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/shopping"
            android:contentDescription="@null"/>
        <ImageView
            android:id="@+id/party"
            android:layout_gravity="center"
            android:layout_width="@dimen/zero"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/party"
            android:contentDescription="@null"/>
        <ImageView
            android:id="@+id/study"
            android:layout_gravity="center"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:src="@drawable/study"
            android:contentDescription="@null"/>
    </LinearLayout>



    <LinearLayout
        android:background="@drawable/my_border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="7">

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_gravity="center"
                android:id="@+id/in_date"
                android:textSize="@dimen/text_extra_large"
                android:text="@string/date_start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/date_and_time"/>
            <TextView
                android:layout_gravity="center"
                android:textSize="@dimen/text_extra_large"
                android:id="@+id/in_time"
                android:layout_width="@dimen/diloag_width"
                android:gravity="center"
                android:text="@string/time_start"
                android:layout_height="wrap_content"
                android:textColor="@color/date_and_time"/>

        </LinearLayout>
        <ImageView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_gravity="center"
            android:src="@drawable/asset1"
            android:contentDescription="@null"/>

        <LinearLayout
            android:layout_width="@dimen/zero"
            android:layout_weight="3"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_gravity="center"
                android:textSize="@dimen/text_extra_large"
                android:gravity="center"
                android:id="@+id/in_dateend"
                android:text="@string/date_end"
                android:layout_width="@dimen/diloag_width"
                android:layout_height="wrap_content"
                android:textColor="@color/date_and_time"/>
            <TextView
                android:layout_gravity="center"
                android:id="@+id/in_time3"
                android:gravity="center"
                android:text="@string/time_end"
                android:textSize="@dimen/text_extra_large"
                android:layout_width="@dimen/diloag_width"
                android:layout_height="wrap_content"
                android:textColor="@color/date_and_time"/>
        </LinearLayout>



    </LinearLayout>






</LinearLayout>